--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: burlywood;
+        }
+
+        .small-font{
+            font-size: larger;
+        }
+
+        .blue-font{
+            color: blue;
+            }
+        .red-font{
+            color: red;
+        }    
+
+    </style>
 </head>
 <body>
- <h1>My First Project</h1>   
+ <h1>My First Project</h1>  
+ <img src="img\dog.jpg" alt=""> 
+ <h1><title></title></h1>
+<h1>title</h1>
+ <h2 class="small-font blue-font">subtitle</h2>
+<h3 class="red-font">new topic</h3>
+
 </body>
 </html>
