--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            background-color: burlywood;
-        }
+  <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"></script>
+    <title>Your Personal Web Page</title>
+  </head>
+  <body>
+    <!-- session final-4 -->
+    <!-- Task: add a div with class 'header' -->
+    <!-- Hint: structure: <div class="header"> <p class="h1">Your Name</p> <div class="nav"> <div class="ul"> links for: Home, About, Portfolio, Services, Blog, Contact </div> </div> </div>  -->
+    <div></div><div class="header"> <p class="h1">Your Name</p> <div class="nav"> <div class="ul"> links for: Home, About, Portfolio, Services, Blog, Contact </div> </div> </div>
 
-        .small-font{
-            font-size: larger;
-        }
+    
+    <!-- session final-4 -->
+    <!-- Task: add a div with class 'main' -->
+    <!-- Hint: this div will include 6 div elements -->
+    <!-- Hint: div element with class 'section' and id 'home' -->
+    <!-- Hint: div element with class 'section' and id 'about' -->
+    <!-- Hint: div element with class 'section' and id 'portfolio' -->
+    <!-- Hint: div element with class 'section' and id 'services' -->
+    <!-- Hint: div element with class 'section' and id 'stats' -->
+    <!-- Hint: div element with class 'section' and id 'blog' -->
+    <!-- Hint: div element with class 'section' and id 'contact' -->
+    <div class="main">
+    <div class="section" id="Home"><p class="h2">Home</p></div>
+    <div class="section" id="About"><p class="h2">about</p></div>
+    <div class="section" id="portfolio"><p class="h2">Portfolio</p></div>
+    <div class="section" id="services"><p class="h2">services</p></div>
+    <div class="section" id="stats"><p class="h2">stats</p></div>
+    <div class="section" id="blog"><p class="h2">blog</p></div>
+    <div class="section" id="contact"><p class="h2">contact</p></div>
+</div>
 
-        .blue-font{
-            color: blue;
-            }
-        .red-font{
-            color: red;
-        }    
+    <!-- session final-4 -->
+    <!-- Task: populate each div with class 'section' with content -->
+    <!-- Hint: use <p class="h2">... for main title text in a section -->
+    <!-- Hint: use <p class="h3">... for important text in a section -->
+    <!-- Hint: use <strong>... for emphasizing a part of a paragraph -->
+    ...
+    
 
-    </style>
-</head>
-<body>
- <h1>My First Project</h1>  
- <img src="img\dog.jpg" alt=""> 
- <h1><title></title></h1>
-<h1>title</h1>
- <h2 class="small-font blue-font">subtitle</h2>
-<h3 class="red-font">new topic</h3>
-
-</body>
+  </body>
 </html>
